--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <h1>The Great <span id="colorDisplay">RBG</span> Color Game</h1>
+    <div>
+        <!-- this block will be used to show whether answer is correct or not -->
+        <span id="message"> </span>
+    </div>
+     
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
