added the easy And Hard Mode and some other features

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <h1>The Great <span id="colorDisplay">RBG</span> Color Game</h1>
-    <div>
+    <div id="stripe">
+        <button id="reset">New Colors</button>
         <!-- this block will be used to show whether answer is correct or not -->
         <span id="message"> </span>
+        <button id="easyBtn">Easy</button>
+        <button id="hardBtn" class="selected">Hard</button>
     </div>
      
     <div id="container">
