--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     
 </head>
 <body>
-    <h1>The Great <span id="colorDisplay">RBG</span> Color Game</h1>
+    <h1>
+        The Great 
+        <br>
+        <span id="colorDisplay">RBG</span> 
+        <br>
+        Color Game
+    </h1>
     <div id="stripe">
         <button id="reset">New Colors</button>
         <!-- this block will be used to show whether answer is correct or not -->
